--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estuary-upload",
+  "name": "@numbersprotocol/estuary-upload",
   "version": "1.0.0",
   "type": "module",
   "description": "",
