--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
   "name": "@numbersprotocol/estuary-upload",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "engines": {
     "node": ">=14.16"
   },
-  "exports": "./src/index.ts",
+  "main": "dist/cjs/estuary-upload.js",
+  "module": "dist/esm/estuary-upload.js",
+  "browser": "dist/browser/estuary-upload.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "dev": "rollup -c -w",
+    "build": "rollup -c",
+    "prebuild:types": "rimraf ./build",
+    "build:types": "tsc -p ./tsconfig.json --outDir build --declaration true && api-extractor run",
+    "predocs": "rimraf ./docs",
+    "docs": "typedoc src --out docs",
+    "clean": "rimraf ./build ./dist ./docs",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "add-dir": "ts-node --esm src/cli.ts"
@@ -19,12 +31,20 @@
     "ipfs-car": "^0.8.1"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.31.2",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@types/jest": "^29.0.3",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "eslint": "^8.23.1",
     "jest": "^29.0.3",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.79.1",
     "ts-jest": "^29.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.15"
   },
   "jest": {
     "moduleFileExtensions": [
