--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "rollup": "^2.79.1",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.15"
+    "tslib": "^2.4.0",
+    "typedoc": "^0.23.15",
+    "typescript": "^4.8.4"
   },
   "jest": {
     "moduleFileExtensions": [
