--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.0.0",
+    "commander": "^9.4.1",
     "ipfs-car": "^0.8.1"
   },
   "devDependencies": {
