fix(src): fix OOM when uploading many files
Fix OOM issue when users try to upload many files at the
same time. When adding files from path, save to temp file instead
of memory to prevent from the memory be exhausted by a big file or
by large amount files.

Add command -V to show the cli version.

Add default timeout 1 minute in Estuary class to replace original
no timeout.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "node",
     "declaration": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "noImplicitAny": true,
@@ -14,5 +15,5 @@
       "*": ["node_modules/*", "src/types/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "test/**/*"]
 }
