--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.0.0",
-    "commander": "^9.4.1",
-    "ipfs-car": "^0.8.1"
+    "axios": "1.2.1",
+    "commander": "9.4.1",
+    "ipfs-car": "0.9.1"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.31.2",
